fix(web-compare): Sources spacing and background

--- a/packages/web-compare/src/components/sources/styles.css
+++ b/packages/web-compare/src/components/sources/styles.css
@@ -1,5 +1,8 @@
 .root {
   border-bottom: 1px solid var(--color-gray-ultra-light);
+  background: var(--color-light);
+  padding-top: var(--space-large);
+  padding-bottom: var(--space-large);
 }
 
 .example {
